List of Vault entries now loads from DB properly

--- a/CujoPasswordManager.csproj
+++ b/CujoPasswordManager.csproj
@@ -74,6 +74,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AddEntry.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -91,6 +92,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Default.aspx" />
+    <Content Include="EntryDetails.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -102,6 +104,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddEntry.aspx.cs">
+      <DependentUpon>AddEntry.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddEntry.aspx.designer.cs">
+      <DependentUpon>AddEntry.aspx</DependentUpon>
+    </Compile>
     <Compile Include="DataAccessLayer\AccountManager.cs" />
     <Compile Include="DataAccessLayer\CustomFunctions.cs" />
     <Compile Include="DataAccessLayer\ErrorHandler.cs" />
@@ -113,6 +122,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EntryDetails.aspx.cs">
+      <DependentUpon>EntryDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EntryDetails.aspx.designer.cs">
+      <DependentUpon>EntryDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
