--- a/packages.config
+++ b/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="8.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="8.0.8" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="SQLite" version="3.13.0" targetFramework="net461" />
 </packages>
