Created script to initialize Microsoft SQL Server database used to store data

--- a/CujoPasswordManager.csproj
+++ b/CujoPasswordManager.csproj
@@ -102,6 +102,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\msSQL_Cujo_DB_Init.sql" />
     <Content Include="SearchResults.aspx" />
     <Content Include="Settings.aspx" />
     <Content Include="Web.config" />
